Listed future links

--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Kinri's Website!!</h1>
+  <p>Blurb: What I'm currently up to</p>
+<p>Resume and CV</p>
+  <p>Writing Samples</p>
+  <p>Social Media Links</p>
+  <p>Daily Poem</p>
 </body>
 </html>
