--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Kinri's Website!!</h1>
+  <body>
+    <h1>Kinri's Website!!</h1>
   <p>Blurb: What I'm currently up to</p>
-<p>Resume and CV</p>
+  <p>Resume and CV</p>
   <p>Writing Samples</p>
   <p>Social Media Links</p>
   <p>Daily Poem</p>
-</body>
+
+    <img src = "https://64.media.tumblr.com/30574c8481a4d7ac2964aee5a80aed88/7471a6b1edb0a8cf-c1/s1280x1920/a87ad7cbce56ecc080924789ee85aef345bf1e5a.jpg">
+  </body>
 </html>
