--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <p>Writing Samples</p>
   <p>Social Media Links</p>
   <p>Daily Poem</p>
-
+<p> test image:</p>
+    <div style="background-color:lightblue"> i love light blue rectangles 
     <img src = "https://64.media.tumblr.com/30574c8481a4d7ac2964aee5a80aed88/7471a6b1edb0a8cf-c1/s1280x1920/a87ad7cbce56ecc080924789ee85aef345bf1e5a.jpg">
+ </div>
   </body>
 </html>
