--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <body>
     <h1>Kinri's Website!!</h1>
-  <p>Blurb: What I'm currently up to</p>
+  <p>Hi! This is a space to play and explore as I learn a little bit of HTML.</p>
   <p>Resume and CV</p>
   <p>Writing Samples</p>
   <p>Social Media Links</p>
