--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body>
+     <div style="background-color:#FF5733;width:60%;display:inline-block">
     <h1>Kinri's Website!!</h1>
   <p>Hi! This is a space to play and explore as I learn a little bit of HTML.</p>
     <h2>Links</h2>
